--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "ola": "echo \"ola\"",
-    "migration": "node runMigration.js"
+    "migration": "node scripts/migration.js",
+    "dev": "nodemon server.js"
   },
   "keywords": [],
   "author": "",
